[package]
name = "service"
version = "0.1.0"
authors = ["Jack Johannesen <jack@insertdomain.name>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
libc = "0.2"
regex = "1.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.1", features = [ "full" ] }
